# pennair2

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  deploy  deploy.sh  genindex.html  index.html  objects.inv  package.xml  py-modindex.html  search.html  searchindex.js  setup.py
_modules/: modules.html  pennair2.html  pennair2.navigation.html  pennair2.vision.html
_sources/: index.rst.txt
_sources/_modules/: modules.rst.txt  pennair2.navigation.rst.txt  pennair2.rst.txt  pennair2.vision.rst.txt
docs/: Makefile  build.sh  conf.py  index.rst  make.bat  pennair2.odg  pennair2.odt
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
docs/_build/html/_modules/: modules.html  pennair2.navigation.html
docs/_modules/: pennair2.navigation.rst  pennair2.rst
launch/: mavros.launch  mavros_posix_sitl.launch  px4_config.yaml  px4_pluginlists.yaml  test.launch
src/: __init__.py
src/pennair2/: __init__.py  actuation.py  autopilot.py  controller.py  conversions.py  core.py  gimbal.py  gimbaltest.py  gui.py  launch.py  localization.py  search.py  servo.py  servotest.py  swarm.py  utm.py  waypoints.py  waypointstest.py
src/pennair2/navigation/: TestWaypoint.py  __init__.py  localization.py  waypoint.py
src/pennair2/shape_detector/: README.txt  classify.py  hsv.py  process_alpha.py  retired_code.py  shapedetector.py  shapeify.py  stratify.py
src/pennair2/violajones/: adaBoost.py  haarCascade.py  integralImage.py  violaUtils.py
src/pennair2/vision/: calibrate.py  imgstream.py  kalman.py  kalmantest.py  orthorectify.py
src/pennair2/vision/CNN/: DIGITS.webloc  cnn.py  cnntest.py  keras + pascal voc.webloc  preprocessing.webloc  tfrecords.webloc
src/test/: search.py  takeoff.py  test_waypoint.py
