<?xml version="1.0.0"?>
<package format="2">
    <name>pennair2</name>
    <version>2.0.0</version>
    <description>The second generation Penn AiR library..</description>
    <maintainer email="owerko@sas.upenn.edu">Damian Owerko</maintainer>
    <license>Please see the attached LICENSE. Contact the maintainer for licensing.</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <url type="website">https://github.com/pennaerial/pennair2</url>


    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
    <author email="owerko@sas.upenn.edu">Damian Owerko</author>


    <buildtool_depend>catkin</buildtool_depend>
    <depend>rostest</depend>
    <depend>rospy</depend>
    <depend>python-utm-pip</depend>
    <depend>python-numpy</depend>
    <depend>tf2</depend>
    <depend>robot_localization</depend>
    <depend>python-opencv</depend>
    <depend>vision_opencv</depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
